--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5",
+    "react-scroll-up": "^1.4.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
